[gd_scene load_steps=7 format=2]

[ext_resource path="res://rooms/corridor_the_office.jpg" type="Texture" id=1]
[ext_resource path="res://RoomMoveTest.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 215.69, 504.715 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 482.374, 100 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 205, 540 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 482.374, 100 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )
default_room = "the_office"

[node name="Room" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="LeaveTween" type="Tween" parent="Room"]

[node name="EnterTween" type="Tween" parent="Room"]

[node name="MoveTimer" type="Timer" parent="Room"]
wait_time = 0.25
one_shot = true

[node name="Rooms" type="Node" parent="."]

[node name="TheOffice" type="Node" parent="Rooms"]

[node name="Transitions" type="Node" parent="Rooms/TheOffice"]

[node name="Door" type="Area2D" parent="Rooms/TheOffice/Transitions"]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rooms/TheOffice/Transitions/Door"]
visible = false
position = Vector2( 1266.75, 628.611 )
shape = SubResource( 1 )
disabled = true

[node name="CorridorTheOffice" type="Node" parent="Rooms"]

[node name="Transitions" type="Node" parent="Rooms/CorridorTheOffice"]

[node name="DoorTheOffice" type="Area2D" parent="Rooms/CorridorTheOffice/Transitions"]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rooms/CorridorTheOffice/Transitions/DoorTheOffice"]
position = Vector2( 1266.75, 984 )
shape = SubResource( 2 )
disabled = true

[node name="CorridorStorageRoom" type="Area2D" parent="Rooms/CorridorTheOffice/Transitions"]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rooms/CorridorTheOffice/Transitions/CorridorStorageRoom"]
position = Vector2( 1715, 540 )
shape = SubResource( 3 )
disabled = true

[node name="CorridorStorageRoom" type="Node" parent="Rooms"]

[node name="Transitions" type="Node" parent="Rooms/CorridorStorageRoom"]

[node name="BackCorridorTheOffice" type="Area2D" parent="Rooms/CorridorStorageRoom/Transitions"]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rooms/CorridorStorageRoom/Transitions/BackCorridorTheOffice"]
visible = false
position = Vector2( 935.824, 984 )
shape = SubResource( 4 )
disabled = true
[connection signal="tween_completed" from="Room/LeaveTween" to="." method="_on_LeaveTween_tween_completed"]
[connection signal="tween_started" from="Room/LeaveTween" to="." method="_on_LeaveTween_tween_started"]
[connection signal="tween_completed" from="Room/EnterTween" to="." method="_on_EnterTween_tween_completed"]
[connection signal="timeout" from="Room/MoveTimer" to="." method="_on_MoveTimer_timeout"]
